--- a/Prediction1/app/src/main/res/layout/main.xml
+++ b/Prediction1/app/src/main/res/layout/main.xml
@@ -11,5 +11,17 @@
         android:layout_gravity="center"
         android:onClick="onRecognizeClicked"
         android:text="@string/ui_collector_button_recognize_title" />
+    <Button
+        android:id="@+id/btnClear"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="onClearClicked"
+        android:text="@string/ui_collector_button_clear_title" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvActivities"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
