--- a/Collector1/app/src/main/res/layout/main.xml
+++ b/Collector1/app/src/main/res/layout/main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="handlers" type="com.michaeltroger.collector1.CollectorActivity.MyHandlers"/>
+        <variable name="handlers" type="com.michaeltroger.featurecollector.CollectorActivity.MyHandlers"/>
     </data>
 <LinearLayout
     android:layout_width="fill_parent"
